2008-09-01  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/Ghostview.c, src/Ghostview.h, src/GhostviewP.h, src/callbacks.c,
	src/file.c, src/misc.c, src/ps.c, src/ps.h, src/zoom.c:
	Large File Support (LFS) - it has to be enabled by the preprocessor
	macros HAVE_LFS64 resp. HAVE_OFF_T.

	* configure.ac, src/Makefile.am: Support setting the macros
	HAVE_LFS64 resp. HAVE_OFF_T.
	
2008-08-30  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/ps.c (ps_io_ftell): Changed return type to long
	
	* src/ps.c (ps_io_fseek): Changed 2nd argument to long
	
	* src/ps.c (FileDataStruct_): Changed type of filepos to long
	
	Purpose: At least on x86_64, long files are supported now

2008-08-24  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/info.c: Skip displaying info-popup until gv_infoSkipErrors
	are sent -- usually gv_infoSkipErrors is 0, but after recognising an
	encrypted pdf, it is set to 1.
	
	* src/callbacks.c (cb_setPassword): Trigger reload of ghostscript by
	calling "cb_reopen(...)".
	
	* src/main.c: Initialize gv_infoSkipErrors with 0
	
	* src/main_globals.h: Declare gv_infoSkipErrors.
	
	* src/ps.c (psscan): Set gv_infoSkipErrors to 1 and jump over
	displaying dsc-parser error.

2008-08-23  Bernhard R. Link <brlink@debian.org>

	* src/callbacks.c (cb_setPassword): New callback for setting password.
	
	* src/callbacks.c (cb_cancelPassword): New callback aborting
	password dialog.
	
	* src/callbacks.c (cb_askPassword): New callback Displaying the 
	password dialog.
	
	* src/callbacks.h: likewise
	
	* src/ps.c (psscan): Use new callback cb_askPassword to query the user
	for the password.

2008-08-23  Markus Steinborn <msteinbo@uni-paderborn.de>

	* doc/gv.texi: Describe new option "--password=PASSWORD".
	
	* src/Ghostview.c (StartInterpreter): Pass actual PDF password
	to ghostscript.
	
	* src/gv_message.h: Add description of new "--password=PASSWORD" option.
	
	* src/main.c (main): Parse new password-Option from command line
	